--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <link rel="background" href="background.PNG">
+    <link rel="icon" type="image" href="questionMark.png">
+    <title>Pairs</title>
 </head>
 
-<body>
+<body background="background.PNG">
     <div id="heading">
         <h1>Pairs</h1>
     </div>
@@ -81,7 +83,7 @@
         <div id=score>
             <p>Turns Taken</p>
             <div id="attempts"></div>
-            <div id="win">You Found All The Pairs!</div>
+            <div id="win">You Win!</div>
             <button id="newGame">New Game</button>
         </div>
 
